exports[`no-todo-test > invalid(1): import test from \"node:test\";\ntest.todo(\"title\"); 1`] = `

  1 | import test from "node:test";
  2 | test.todo("title");

`;

exports[`no-todo-test > invalid(1): import test from \"node:test\";\ntest.todo(\"title\"); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test.todo("title");
    |      ^^^^ Do not commit \`.todo\` tests.

Suggestion 1/1: Remove \`.todo\`.:
  1 | import test from "node:test";
  2 | test("title");

`;

exports[`no-todo-test > invalid(10): import {test} from 'node:test';\ntest('p', async t => { await t.test('c', {todo: true}, () => {}); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', async t => { await t.test('c', {todo: true}, () => {}); });

`;

exports[`no-todo-test > invalid(10): import {test} from 'node:test';\ntest('p', async t => { await t.test('c', {todo: true}, () => {}); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', async t => { await t.test('c', {todo: true}, () => {}); });
    |                                           ^^^^^^^^^^ Do not commit \`.todo\` tests.

`;

exports[`no-todo-test > invalid(11): import test from 'node:test';\ntest(\"title\", {todo: 0}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test("title", {todo: 0}, () => {});

`;

exports[`no-todo-test > invalid(11): import test from 'node:test';\ntest(\"title\", {todo: 0}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("title", {todo: 0}, () => {});
    |                ^^^^^^^ Do not commit \`.todo\` tests.

`;

exports[`no-todo-test > invalid(12): import test from 'node:test';\ntest(\"title\", {todo: \"\"}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test("title", {todo: ""}, () => {});

`;

exports[`no-todo-test > invalid(12): import test from 'node:test';\ntest(\"title\", {todo: \"\"}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("title", {todo: ""}, () => {});
    |                ^^^^^^^^ Do not commit \`.todo\` tests.

`;

exports[`no-todo-test > invalid(13): import test from 'node:test';\ntest(\"title\", {todo: null}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test("title", {todo: null}, () => {});

`;

exports[`no-todo-test > invalid(13): import test from 'node:test';\ntest(\"title\", {todo: null}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("title", {todo: null}, () => {});
    |                ^^^^^^^^^^ Do not commit \`.todo\` tests.

`;

exports[`no-todo-test > invalid(14): import test from 'node:test';\n(test.todo as any)('a', () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | (test.todo as any)('a', () => {});

`;

exports[`no-todo-test > invalid(14): import test from 'node:test';\n(test.todo as any)('a', () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | (test.todo as any)('a', () => {});
    |       ^^^^ Do not commit \`.todo\` tests.

Suggestion 1/1: Remove \`.todo\`.:
  1 | import test from 'node:test';
  2 | (test as any)('a', () => {});

`;

exports[`no-todo-test > invalid(15): import test from 'node:test';\ntest.todo!('a', () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test.todo!('a', () => {});

`;

exports[`no-todo-test > invalid(15): import test from 'node:test';\ntest.todo!('a', () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test.todo!('a', () => {});
    |      ^^^^ Do not commit \`.todo\` tests.

Suggestion 1/1: Remove \`.todo\`.:
  1 | import test from 'node:test';
  2 | test!('a', () => {});

`;

exports[`no-todo-test > invalid(2): import {it} from \"node:test\";\nit.todo(\"title\"); 1`] = `

  1 | import {it} from "node:test";
  2 | it.todo("title");

`;

exports[`no-todo-test > invalid(2): import {it} from \"node:test\";\nit.todo(\"title\"); 2`] = `

Message:
  1 | import {it} from "node:test";
> 2 | it.todo("title");
    |    ^^^^ Do not commit \`.todo\` tests.

Suggestion 1/1: Remove \`.todo\`.:
  1 | import {it} from "node:test";
  2 | it("title");

`;

exports[`no-todo-test > invalid(3): import {describe} from \"node:test\";\ndescribe.todo(\"title\", () => {}); 1`] = `

  1 | import {describe} from "node:test";
  2 | describe.todo("title", () => {});

`;

exports[`no-todo-test > invalid(3): import {describe} from \"node:test\";\ndescribe.todo(\"title\", () => {}); 2`] = `

Message:
  1 | import {describe} from "node:test";
> 2 | describe.todo("title", () => {});
    |          ^^^^ Do not commit \`.todo\` tests.

Suggestion 1/1: Remove \`.todo\`.:
  1 | import {describe} from "node:test";
  2 | describe("title", () => {});

`;

exports[`no-todo-test > invalid(4): import {todo} from \"node:test\";\ntodo(\"title\", () => {}); 1`] = `

  1 | import {todo} from "node:test";
  2 | todo("title", () => {});

`;

exports[`no-todo-test > invalid(4): import {todo} from \"node:test\";\ntodo(\"title\", () => {}); 2`] = `

Message:
  1 | import {todo} from "node:test";
> 2 | todo("title", () => {});
    | ^^^^ Do not commit \`.todo\` tests.

`;

exports[`no-todo-test > invalid(5): import {todo as pending} from \"node:test\";\npending(\"title\", () => {}); 1`] = `

  1 | import {todo as pending} from "node:test";
  2 | pending("title", () => {});

`;

exports[`no-todo-test > invalid(5): import {todo as pending} from \"node:test\";\npending(\"title\", () => {}); 2`] = `

Message:
  1 | import {todo as pending} from "node:test";
> 2 | pending("title", () => {});
    | ^^^^^^^ Do not commit \`.todo\` tests.

`;

exports[`no-todo-test > invalid(6): import test from \"node:test\";\ntest(\"title\", {todo: true}, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("title", {todo: true}, () => {});

`;

exports[`no-todo-test > invalid(6): import test from \"node:test\";\ntest(\"title\", {todo: true}, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("title", {todo: true}, () => {});
    |                ^^^^^^^^^^ Do not commit \`.todo\` tests.

`;

exports[`no-todo-test > invalid(7): import test from \"node:test\";\ntest(\"title\", {todo: \"later\"}, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("title", {todo: "later"}, () => {});

`;

exports[`no-todo-test > invalid(7): import test from \"node:test\";\ntest(\"title\", {todo: \"later\"}, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("title", {todo: "later"}, () => {});
    |                ^^^^^^^^^^^^^ Do not commit \`.todo\` tests.

`;

exports[`no-todo-test > invalid(8): import * as nodeTest from \"node:test\";\nnodeTest.test.todo(\"title\", () => {}); 1`] = `

  1 | import * as nodeTest from "node:test";
  2 | nodeTest.test.todo("title", () => {});

`;

exports[`no-todo-test > invalid(8): import * as nodeTest from \"node:test\";\nnodeTest.test.todo(\"title\", () => {}); 2`] = `

Message:
  1 | import * as nodeTest from "node:test";
> 2 | nodeTest.test.todo("title", () => {});
    |               ^^^^ Do not commit \`.todo\` tests.

Suggestion 1/1: Remove \`.todo\`.:
  1 | import * as nodeTest from "node:test";
  2 | nodeTest.test("title", () => {});

`;

exports[`no-todo-test > invalid(9): import * as nodeTest from \"node:test\";\nnodeTest.todo(\"title\", () => {}); 1`] = `

  1 | import * as nodeTest from "node:test";
  2 | nodeTest.todo("title", () => {});

`;

exports[`no-todo-test > invalid(9): import * as nodeTest from \"node:test\";\nnodeTest.todo(\"title\", () => {}); 2`] = `

Message:
  1 | import * as nodeTest from "node:test";
> 2 | nodeTest.todo("title", () => {});
    |          ^^^^ Do not commit \`.todo\` tests.

`;
